# scurry-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  search-index.js
bufstream/: struct.BufStream.html  struct.IntoInnerError.html
byteorder/: enum.BigEndian.html  enum.LittleEndian.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.NativeEndian.html  type.NetworkEndian.html
chrono/: enum.Weekday.html  struct.Duration.html
hex/: enum.FromHexError.html  index.html  (+2 more)
scurry/: Cargo.toml  enum.HistoryDifferences.html  fn.from_postgres.html  fn.from_sqlite.html  fn.get_available_versions.html  fn.get_differences.html  fn.get_schema_history.html  fn.migrate.html  fn.set_schema_level.html  index.html  sidebar-items.js
scurry/connection/: enum.HistoryDifferences.html  index.html  sidebar-items.js  trait.ScurryConnection.html
scurry/connection/postgres/: fn.establish.html  index.html  sidebar-items.js  struct.Postgres.html  struct.PostgresScurryConnection.html
scurry/connection/sqlite/: fn.establish.html  index.html  sidebar-items.js  struct.Sqlite.html  struct.SqliteScurryConnection.html
scurry/error/: enum.ScurryError.html  index.html  sidebar-items.js
scurry/models/: index.html  sidebar-items.js  struct.ScurryMetadata.html
scurry/src/: error.rs  lib.rs  util.rs  versions.rs
scurry/src/connection/: mod.rs  postgres.rs  sqlite.rs
scurry/util/: enum.HistoryDifferences.html  sidebar-items.js
scurry/versions/: enum.DesiredVersion.html  index.html  sidebar-items.js  struct.Version.html
scurry_cli/: Cargo.toml
scurry_cli/src/: main.rs  termlog.rs
(+2323 files in other folders)
