[package]
name = "scurry"
version = "0.1.0"
authors = ["bsundsrud <benn.sundsrud@gmail.com>"]

[lib]
name = "scurry"

[dependencies]
postgres = { version = "*", features = ["chrono"], optional = true }
rusqlite = { git = "https://github.com/jgallagher/rusqlite", features = ["chrono"], optional = true }
chrono = "*"
log = "*"
sha1 = "*"

[features]
default = ["postgres"]
sqlite = ["rusqlite"]
